<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Authentication">
    <Button
            android:text="@string/code_receiving"
            android:layout_width="match_parent"
            android:textColor="@android:color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_height="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/btn_code_receiving"
            android:layout_marginBottom="36dp" app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/button_back" android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp" app:layout_constraintStart_toStartOf="parent"
    />
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp" app:srcCompat="@drawable/karjost_logo"
            android:id="@+id/imageView6"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="numberSigned"
            android:ems="10"
            android:id="@+id/code_et"
            android:layout_marginStart="100dp"
            android:digits="5"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="100dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/register_code"
            android:gravity="center_horizontal|center_vertical"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/imageView6"
            android:background="@drawable/layout_back" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/timer_tv"/>
    <TextView
            tools:text="00:53"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/timer_tv" app:layout_constraintBottom_toTopOf="@+id/btn_code_receiving"
            android:layout_marginBottom="20dp" android:gravity="center"/>
    <TextView
            android:text="@string/error_code_receiving"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:textColor="#707070"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/error_code_tv" app:layout_constraintBottom_toTopOf="@+id/btn_code_receiving"
            android:layout_marginBottom="20dp" android:gravity="center"/>
    <TextView
            android:text="@string/error_code_validation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/error_code_validation"
            android:layout_marginBottom="8dp"
            android:visibility="invisible"
            android:textColor="#FF0000"
            app:layout_constraintBottom_toTopOf="@+id/code_et" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>

</android.support.constraint.ConstraintLayout>