<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:background="@android:color/white"
                                             android:layout_height="match_parent">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp" app:srcCompat="@drawable/karjost_logo"
            android:id="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toEndOf="@+id/guideline16" android:layout_marginStart="16dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="@+id/guideline13"
            app:layout_constraintHorizontal_bias="0.285"/>

    <Spinner
            android:layout_width="232dp"
            android:layout_height="50dp"
            android:paddingStart="14dp"
            android:gravity="center_horizontal"
            android:layoutDirection="rtl"
            android:padding="8dp"
            android:background="@drawable/spinner_back"
            android:id="@+id/spinner_city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:paddingEnd="8dp"
            android:layout_marginTop="50dp" app:layout_constraintTop_toBottomOf="@+id/imageView2"
    />


    <TextView
            android:text="@string/error_user_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/tv_error_user_type" android:textColor="#EB0C2E" android:visibility="gone"
            android:layout_marginBottom="4dp" app:layout_constraintBottom_toTopOf="@+id/spinner_user_type"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/spinner_city"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:textSize="12sp"/>
    <Spinner
            android:layout_width="232dp"
            android:layout_height="50dp"
            android:gravity="center_horizontal"
            android:prompt="@string/user_type"
            android:layoutDirection="rtl"
            android:paddingEnd="8dp"
            android:paddingStart="14dp"
            android:id="@+id/spinner_user_type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.497" android:background="@drawable/spinner_back"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/spinner_city"/>

    <LinearLayout android:layout_width="300dp"
                  app:layout_constraintStart_toStartOf="parent" android:background="@drawable/layout_back"
                  android:layout_height="50dp"
                  android:orientation="horizontal"
                  android:layout_marginBottom="200dp"
                  app:layout_constraintBottom_toTopOf="@+id/btn_code_receiving"
                  app:layout_constraintEnd_toEndOf="parent"
                  android:ems="10"
                  android:layout_marginTop="50dp"
                  app:layout_constraintVertical_bias="0.0"
                  app:layout_constraintTop_toBottomOf="@+id/spinner_user_type"
                  app:layout_constraintHorizontal_bias="0.496"
                  android:layout_marginStart="56dp" android:layout_marginEnd="56dp" android:id="@+id/linearLayout3">


        <EditText android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:inputType="phone"
                  android:layout_gravity="center"
                  android:paddingRight="8dp"
                  android:cursorVisible="false"
                  android:textColorLink="#1D1A1A"
                  android:autofillHints="@string/mobile_number"
                  android:paddingBottom="8dp"
                  android:paddingLeft="8dp" android:id="@+id/phone_number_et"
                  android:hint="@string/mobile_number" android:gravity="center"
                  android:textColorHint="#5C5C5C"
                  android:textColor="@android:color/black" android:singleLine="true"/>
    </LinearLayout>
    <Button
            android:text="@string/code_receiving"
            android:layout_width="match_parent"
            android:textColor="@android:color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_height="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/btn_code_receiving"
            android:layout_marginBottom="36dp" app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/button_back" android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp" app:layout_constraintStart_toStartOf="parent"
    />
    <TextView
            android:text="@string/error_mobile_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/tv_error_mobile" android:textColor="#EB0C2E" android:visibility="gone"
            android:layout_marginBottom="4dp" app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/spinner_user_type"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:textSize="12sp"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline13"
                                          android:orientation="horizontal"
                                          app:layout_constraintGuide_percent="0.03009576"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline16" app:layout_constraintGuide_begin="20dp"
                                          android:orientation="vertical"/>
</android.support.constraint.ConstraintLayout>